<?xml version="1.0" encoding="utf-8"?>
<ImageButton android:id="@+id/plusButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/ic_add_survey"
    android:layout_marginBottom="10dp"
    android:layout_marginRight="20dp"
    android:onClick="newSurvey"
    xmlns:android="http://schemas.android.com/apk/res/android"/>