<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <NumberPicker
        android:id="@+id/year_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <org.eyeseetea.sdk.presentation.views.CustomButton
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@android:string/cancel"
            android:textSize="?attr/font_small"
            android:background="@android:color/transparent"
            app:font="@string/condensed_font_name" />

        <org.eyeseetea.sdk.presentation.views.CustomButton
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:text="@android:string/ok"
            android:textSize="?attr/font_small"
            app:font="@string/condensed_font_name" />


    </LinearLayout>

</LinearLayout>